--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-website",
   "private": true,
+  "homepage":"https://6s-1.github.io/Shreya-s-portfolio-website/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
