--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-svg": "^16.2.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
